Fixed popup visibility

--- a/Challenge C03/style/main.css
+++ b/Challenge C03/style/main.css
@@ -322,6 +322,7 @@ article {
 }
 
 .popup {
+	visibility: hidden;
 	position: absolute;
 	top: 0;
 	left: 0;
